<resources>
    <string name="app_name">Calculadora</string>
    <string name="buttonX">x</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="buttonAC">AC</string>
    <string name="buttonShare">COMPARTIR</string>
    <string name="buttonDiv">/</string>
    <string name="buttonRest">-</string>
    <string name="buttonPlus">+</string>
    <string name="buttonComa">,</string>
    <string name="button2">2</string>
    <string name="buttonEquals">=</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="txt_number">0</string>
    <string name="txt_number1">0</string>
</resources>